@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1,SHA512
 
-619d997a8395c16dcd25ee1f12081900601f6dc6  14850 ChangeLog
+d2661559f532eb27eaf3cde1bf9ac311b9bb2f80  14925 ChangeLog
 8b869a67b40453fb41c8527e8aaf80f66c8a473f   2731 Makefile
 07b4f1de1ba206bdcadd2d234c89006f1b07388a   9882 configure
 4cc77b90af91e615a64ae04893fdffa7939db84c  18092 gpl-2.0.txt
@@ -22,22 +22,22 @@ eae1b0fb4deb0adbed4237bfbf7cea7022efa909   2373 misc/64.png
 c5ccf87f60b8039f34e8914edd866cce5564a3e4   1707 misc/manpage.1
 a83357473eb7c431a9f8e2813e02553d5ffa54b7    338 misc/showvte.1
 84accad152634bec1517b6134c494e0e02382f26  10262 src/config.h
-19751a7e3cfb2a68152c5fcb99a63983f0fdb7b5 155648 src/evilvte.c
+9be7a8a9f1ddddcd945ca92d5f8ecc8138ea72a5 156184 src/evilvte.c
 b6d50176aaf9828bcdf63f8d52f8c8080fefd9f2  14792 src/process.sh
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAk8X0GcACgkQdEpXpumNYVl+tgCeID1xIkdJ1pm+qCsm/NZNg/hG
-IyIAn1XbmOdfQ58/r4jo8DnQVKZYAmYdiQIcBAEBCgAGBQJPF9BnAAoJELc3H0m+
-i6gZvakQAKebPbB09G/YzOGLQVN2UdlmsxIuO+CmCYeEnCWseKRFqBTgyx7Q3xFe
-8500vd1ScrEE2RNidRSMXIioUdulwAXLUsTQ4viUagV4UuiAzWNIxz490Mq9nbvo
-063mizWcE9jMwpHNxFb6QuR+5x2yeFWgs+bUTWGyikDcRnqxiTUbioPpifDZ6xww
-bJyPN869UmBe1+blcBXQSjT72Tv3HKdliPwFi2IpHPSTU3mdzqA3Zf9OuySVLNtV
-Gf+lfFWOZ7fsgoOwEkFuuBKlPgnxUYhusp66KLsg5EMnbKJYRT/v+ZsBkbfjdC+c
-zd9Ed0bZT0+mrjfouGPxZg9cEPZCFGrVDC/M+F8QRwsFjlq040ltrLHXrtZP+4S3
-/9nfzvWc2XQwHoeaMEwSwi4kzuRDEdD0Npnhh5TwjX0iwxhoVLYK1HLPKNgDa5Wx
-VOeJy/JQR5d8eXt10Qd3aMhzb3A2OaVc4tIikGNyQLlSFjqoSL6PCCSnZcOP4WdX
-EwZQWGCSjcl/AKU2x0dXgFZPgxr2qBCDvpOOOj3BYN7VN7cmZ8F9PJ2grxzSmCXA
-DHMXvM6QbWxSBSFyCAhBgFw2hD5PAWn/hbeHNJpUY+dO5TFvG2Hu/oXSxQKg8IbN
-Nwdk+V04jR4BmP+EACRKPRlbvZNF7nTKEk+QOdEQ91z0GRc2AVLb
-=mYqo
+iEYEARECAAYFAk8X0O0ACgkQdEpXpumNYVmzpQCcCtJZhdry1uZxMmSqqkzpR0zF
+1MEAoISZapoAXeDlmBa0nDCWRDcQfnvciQIcBAEBCgAGBQJPF9DtAAoJELc3H0m+
+i6gZfr8QAJPmQuKiuf5ymZZ5IjbWhYOzYKum7PrpFOLabtW1AMFYAHSfjKRnloII
+vInqzGEcnGx2HzkZZIiwqCLF//gOO4CBceM7NAPJdvUcexm3RThchoaPeuadjofw
+K8MS5AEyL0H8E5l9EOq7Z8jWnbvlgMb0THYjG+/zKpxp5o0rGP8QwLYK+uffuzDv
+RHaa5MQtevLX6xt0L5241Mlcq79EpgKMkhLWpNuyFWYlJhlonN7KZP4vS29Jtv5G
+6NlExU6fJnSWENrA7NknNNof848DHK8BVn+GTtFTMf77f7JPocyMnc8cTH9axpmD
+PSwubN8U/lPO+5X4/S40C4qrbWyuZDw/XxkoSHSpJ5Q+ZJjL1rayPGRmUWH3vRyH
+axi5v4Ty7otoKJKJb8vgWg2mtaT9tFI9CXUWQyIjRW6YI5Bq6hw/f5RI3cTslKP/
+LVE8FkTEoISO1LUORqmLuvamBSzc/SbsGEVsq3eIna6GQxyNvMrI4bhLpMAfMn0A
+/AtM9ZzMVV6ISGg0aG0X++nr+Q1VaWDmx0FGqo7hi9Rmads7THl/hNlnD1XM0KPq
+uNw7dH/aX6gMT4O34WBrpgdwfba0I6p6gdFd/5VM/cDp/KV1lguVLcxrHvZXNyH0
+MHZnhYKUxCv6UoG8C0Qxos8XFqUCYCvpOTQva8U+advnWxfJ+njQ
+=9/Qc
 -----END PGP SIGNATURE-----
